Fixed IE bug + Scrollbar

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -21,6 +21,7 @@
 
   &__content {
     margin-top: 20px;
+    width: 100%;
   }
 
   &__subcontentTitle {
