--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -30,7 +30,8 @@
     margin-right: auto;
     background-color: $white;
     position: relative;
-    
+    overflow: hidden;
+
     max-width: 900px;
 
     width: 100%;
