--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -58,7 +58,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  overflow: hidden;
+  overflow-y: auto;
 
   position: fixed;
   z-index: 1000;
@@ -81,20 +81,18 @@
 
   &__logo {
 
-    & {
-      max-width: 140px;
-      padding: 20px;
-      
-      &:hover {
-        opacity: .6;
-      }
+    padding-top: 10px;
+    max-width: 140px;
+    max-height: 140px;
+    
+    &:hover {
+      opacity: .6;
     }
 
     &,
     &--mobile {
       pointer-events: initial;
       display: block;
-      padding: 10px 0;
       cursor: pointer;
       opacity: 1;
       transition: opacity .3s;
@@ -102,6 +100,7 @@
     
     &--mobile {
       height: 100%;
+      padding: 10px 0;
 
       & > img {
         max-height: 100%;
@@ -263,7 +262,7 @@
     padding: 20px 0px 0px;
     position: relative;
     flex: 0 1 600px;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0);
     max-height: 100%;
   }
 
@@ -273,11 +272,25 @@
   
   .menu {
     display: flex;
-    margin-top: 10%;
+    margin: auto 0;
+    padding-bottom: 40px;
+
+    &__item-wrapper {
+
+      &:first-child {
+        .menu__item {
+          &,
+          li {
+            margin-top: 0;
+          }
+        }
+      }
+    }
 
     &__item {
       font-size: 1.35rem;
       width: auto;
+
     }
   }
 }
